--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mbecker</groupId>
-  <artifactId>requiredactionmobile</artifactId>
+  <artifactId>keycloak-spi-amqp-mfa-events</artifactId>
   <version>0.1-SNAPSHOT</version>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -75,34 +75,63 @@
   </dependencies>
 
   <build>
-		<finalName>${project.groupId}-${project.artifactId}-${project.version}</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>${maven-shade.version}</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<artifactSet>
-								<excludes>
-									<exclude>com.fasterxml.jackson.core</exclude>
-									<exclude>org.apache.httpcomponents</exclude>
-									<exclude>commons-logging</exclude>
-									<exclude>commons-codec</exclude>
-								</excludes>
-							</artifactSet>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-  
+    <finalName>${project.groupId}-${project.artifactId}-${project.version}</finalName>
+    <plugins>
+      <plugin>
+        <groupId>de.qaware.maven</groupId>
+        <artifactId>go-offline-maven-plugin</artifactId>
+        <version>1.2.8</version>
+        <configuration>
+          <dynamicDependencies>
+            <DynamicDependency>
+              <groupId>org.apache.maven.surefire</groupId>
+              <artifactId>surefire-junit4</artifactId>
+              <version>2.20.1</version>
+              <repositoryType>PLUGIN</repositoryType>
+            </DynamicDependency>
+            <DynamicDependency>
+              <groupId>com.querydsl</groupId>
+              <artifactId>querydsl-apt</artifactId>
+              <version>4.2.1</version>
+              <classifier>jpa</classifier>
+              <repositoryType>MAIN</repositoryType>
+            </DynamicDependency>
+            <DynamicDependency>
+              <groupId>org.flywaydb</groupId>
+              <artifactId>flyway-commandline</artifactId>
+              <version>4.0.3</version>
+              <type>zip</type>
+              <repositoryType>MAIN</repositoryType>
+            </DynamicDependency>
+          </dynamicDependencies>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>${maven-shade.version}</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <artifactSet>
+                <excludes>
+                  <exclude>com.fasterxml.jackson.core</exclude>
+                  <exclude>org.apache.httpcomponents</exclude>
+                  <exclude>commons-logging</exclude>
+                  <exclude>commons-codec</exclude>
+                </excludes>
+              </artifactSet>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
   <!-- <build>
     <plugins>
       <plugin>
@@ -146,7 +175,7 @@
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
           <skip>${skipTests}</skip>
         </configuration> -->
-        <!-- <executions>
+  <!-- <executions>
           <execution>
             <id>checkstyle</id>
             <phase>validate</phase>
@@ -155,7 +184,7 @@
             </goals>
           </execution>
         </executions> -->
-      <!-- </plugin>
+  <!-- </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -165,7 +194,7 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>${jacoco-maven-plugin.version}</version> -->
-        <!-- <executions>
+  <!-- <executions>
           <execution>
             <id>pre-unit-test</id>
             <goals>
@@ -227,7 +256,7 @@
             </configuration>
           </execution>
         </executions> -->
-      <!-- </plugin>
+  <!-- </plugin>
     </plugins>
   </build> -->
   <reporting>
