--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
       <version>5.5.7.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>javase</artifactId>
+      <version>3.4.1</version>
+    </dependency>
+
 
 
     <dependency>
