--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <groupId>com.mbecker</groupId>
   <artifactId>keycloak-spi-amqp-mfa-events</artifactId>
   <version>0.1-SNAPSHOT</version>
-  
+
   <packaging>pom</packaging>
 
   <modules>
@@ -45,6 +45,14 @@
       <version>2.8.8</version>
       <scope>compile</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.google.zxing/javase -->
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>javase</artifactId>
+      <version>3.4.1</version>
+    </dependency>
+
 
     <dependency>
       <groupId>com.rabbitmq</groupId>
